@@ -1,0 +1,40 @@
+//
+//  BezierPathExtensions.m
+//  Vienna
+//
+//  Created by Steve on 7/16/05.
+//  Copyright (c) 2004-2005 Steve Palmer. All rights reserved.
+//
+//  Licensed under the Apache License, Version 2.0 (the "License");
+//  you may not use this file except in compliance with the License.
+//  You may obtain a copy of the License at
+//
+//  http://www.apache.org/licenses/LICENSE-2.0
+//
+//  Unless required by applicable law or agreed to in writing, software
+//  distributed under the License is distributed on an "AS IS" BASIS,
+//  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+//  See the License for the specific language governing permissions and
+//  limitations under the License.
+//
+
+#import "BezierPathExtensions.h"
+
+@implementation NSBezierPath (BezierPathExtensions)
+
+/* bezierPathWithRoundRectInRect
+ * Create a rectangluar bezier path with rounded corners. Radius is the radius of the corners.
+ */
++(NSBezierPath *)bezierPathWithRoundRectInRect:(NSRect)aRect radius:(float)radius
+{
+	NSBezierPath * path = [NSBezierPath bezierPath];
+	radius = MIN(radius, 0.5f * MIN(NSWidth(aRect), NSHeight(aRect)));
+	NSRect rect = NSInsetRect(aRect, radius, radius);
+	[path appendBezierPathWithArcWithCenter:NSMakePoint(NSMinX(rect), NSMinY(rect)) radius:radius startAngle:180.0 endAngle:270.0];
+	[path appendBezierPathWithArcWithCenter:NSMakePoint(NSMaxX(rect), NSMinY(rect)) radius:radius startAngle:270.0 endAngle:360.0];
+	[path appendBezierPathWithArcWithCenter:NSMakePoint(NSMaxX(rect), NSMaxY(rect)) radius:radius startAngle:  0.0 endAngle: 90.0];
+	[path appendBezierPathWithArcWithCenter:NSMakePoint(NSMinX(rect), NSMaxY(rect)) radius:radius startAngle: 90.0 endAngle:180.0];
+	[path closePath];
+	return path;
+}
+@end
